--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sourcemap-stacktrack-parser",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "start": "ts-node-dev ./src/index.ts -P tsconfig.json --no-cache",
     "build": "tsc -P tsconfig.json",
@@ -29,6 +29,7 @@
     "@types/jest": "^25.1.2",
     "commitizen": "^4.0.3",
     "cz-conventional-changelog": "^3.1.0",
+    "error-stack-parser": "^2.0.6",
     "husky": "^4.2.1",
     "jest": "^25.1.0",
     "prettier": "^1.19.1",
