--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
         "outDir": "./lib",
         "target": "es2017",
         "module": "commonjs",//组织代码方式
-        "sourceMap": true,
+        "sourceMap": false,
         "moduleResolution": "node", // 模块解决策略
         "experimentalDecorators": true, // 开启装饰器定义
         "allowSyntheticDefaultImports": true, // 允许es6方式import
